--- a/Our Services.html
+++ b/Our Services.html
@@ -721,7 +721,7 @@
             </div>
 
              <ul class="nav-links" id="navLinks">
-                <li><a href="Novus.html" class="active">Home</a></li>
+                <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="Our Services.html">Services</a></li>
                 <li><a href="About us.html">About Us</a></li>
                 <li><a href="#contact">Contact</a></li>
@@ -1562,4 +1562,5 @@
         document.getElementById('date').setAttribute('min', today);
     </script>
 </body>
+
 </html>
