--- a/Our Services.html
+++ b/Our Services.html
@@ -1104,7 +1104,7 @@
     <section class="home-collection" id="home-collection">
         <div class="section-title">
             <h2>Free Home Sample Collection</h2>
-            <p>"घरमै बसेर test गर्नुहोस्! हाम्रो trained phlebotomist तपाईंको घरमै पुग्छ। बस appointment बुक गर्नुहोस्, बाँकी हामी सम्हाल्छौं।"</p>
+            <p>“घरमै बसेर test गर्नुहोस्! हाम्रो trained phlebotomist तपाईंको घरमै पुग्छ। बस appointment बुक गर्नुहोस्, बाँकी हामी सम्हाल्छौं।”</p>
         </div>
         
         <div class="home-collection-content">
