--- a/About us.html
+++ b/About us.html
@@ -902,8 +902,8 @@ body {
             <ul class="nav-links" id="navLinks">
                 <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="Our Services.html">Services</a></li>
-                <li><a href="#machines">About Us</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="About us.html">About Us</a></li>
+                <li><a href="Contact us.html">Contact</a></li>
             </ul>
             <div class="mobile-menu" id="mobileMenu">
                 <i class="fas fa-bars"></i>
