--- a/Our Services.html
+++ b/Our Services.html
@@ -724,7 +724,7 @@
                 <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="Our Services.html">Services</a></li>
                 <li><a href="About us.html">About Us</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="Contact us.html">Contact</a></li>
             </ul>
             <div class="mobile-menu" id="mobileMenu">
                 <i class="fas fa-bars"></i>
