--- a/Contact us.html
+++ b/Contact us.html
@@ -484,7 +484,7 @@
                     </div>
                     <div class="contact-details">
                         <h3>Our Location</h3>
-                        <p>123 Medical Center Drive<br>Healthcare Plaza, Floor 3<br>City, State 12345</p>
+                        <p>Lampati kalanki 14,<br>Kathmandu, Nepal, 44600</p>
                     </div>
                 </div>
                 <div class="contact-item">
@@ -493,7 +493,7 @@
                     </div>
                     <div class="contact-details">
                         <h3>Phone Number</h3>
-                        <p>+1 (555) 123-4567<br>Emergency: +1 (555) 987-6543<br>Fax: +1 (555) 123-4568</p>
+                        <p>01-5234659</p>
                     </div>
                 </div>
                 <div class="contact-item">
@@ -502,7 +502,7 @@
                     </div>
                     <div class="contact-details">
                         <h3>Email Address</h3>
-                        <p>info@novuspathlabs.com<br>reports@novuspathlabs.com<br>support@novuspathlabs.com</p>
+                        <p>novusnepal@gmail.com</p>
                     </div>
                 </div>
                 <div class="contact-item">
@@ -511,7 +511,7 @@
                     </div>
                     <div class="contact-details">
                         <h3>Working Hours</h3>
-                        <p>Mon - Fri: 7:00 AM - 8:00 PM<br>Saturday: 8:00 AM - 6:00 PM<br>Sunday: 9:00 AM - 4:00 PM</p>
+                        <p>.....</p>
                     </div>
                 </div>
                 
