--- a/Our Services.html
+++ b/Our Services.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Novus Path Labs - Advanced Medical Laboratory</title>
+    <title>Novus Path Labs - Our Services</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         * {
@@ -1348,7 +1348,7 @@
                         </div>
                         <div class="feature-text">
                             <h4>Working Hours</h4>
-                            <p>Sunday - Friday: 7 AM - 7 PM<br>Saturday: 7 AM - 2 PM</p>
+                            <p>......</p>
                         </div>
                     </div>
                 </div>
