--- a/Contact us.html
+++ b/Contact us.html
@@ -729,7 +729,7 @@
             console.log('Form submitted:', {
                 name,
                 phone,
-                email: document.getElementById('email').value,
+                email: document.getElementById('bimarsha99@gmail.com').value,
                 subject,
                 message
             });
@@ -844,7 +844,7 @@
             
             const encodedSubject = encodeURIComponent(emailSubject);
             const encodedBody = encodeURIComponent(emailBody);
-            document.querySelector('.booking-btn.email').href = `mailto:info@novuspathlabs.com?subject=${encodedSubject}&body=${encodedBody}`;
+            document.querySelector('.booking-btn.email').href = `bimarsha99@gmail.com?subject=${encodedSubject}&body=${encodedBody}`;
         }
 
         // Update email link when form fields change
