--- a/Contact us.html
+++ b/Contact us.html
@@ -28,9 +28,10 @@
             background-color: #f5f7fa;
         }
 
-        /* Navigation */
+ /* Navigation */
         nav {
             position: fixed;
+            left:0;
             top: 0;
             width: 100%;
             background: rgba(255, 255, 255, 0.98);
@@ -53,32 +54,16 @@
             align-items: center;
         }
 
-        .logo {
-            display: flex;
-            align-items: center;
-            gap: 8px;
-        }
-
-        .logo img {
-            height: 40px;
-            width: auto;
-            object-fit: contain;
-        }
-
-        .logo span {
-            font-weight: 700;
-            font-size: 18px;
-            color: var(--dark);
-        }
-
         .nav-links {
             display: flex;
             gap: 2rem;
             list-style: none;
+            align-items: center;
         }
 
         .nav-links a {
             text-decoration: none;
+            left: 196px;
             color: var(--dark);
             font-weight: 500;
             transition: color 0.3s;
@@ -101,12 +86,38 @@
             width: 100%;
         }
 
+       .social-nav {
+    display: flex;       /* keep icons in a row */
+    gap: 1rem;           /* space between icons */
+    transform: translateX(100px); /* move whole social icons container slightly left */
+}
+
+
+
+        .social-nav a {
+            width: 36px;
+            height: 36px;
+            border-radius: 50%;
+            background: var(--gradient);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: white;
+            transition: all 0.3s;
+        }
+
+        .social-nav a:hover {
+            transform: translateY(-3px);
+            box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+        }
+
         .mobile-menu {
             display: none;
             font-size: 1.5rem;
             cursor: pointer;
             color: var(--dark);
         }
+
 
         /* Contact Section */
         .contact-section {
@@ -450,24 +461,32 @@
     </style>
 </head>
 <body>
-    <!-- Navigation -->
-    <nav id="navbar">
-        <div class="nav-container">
-            <div class="logo">
-                <img src="Novus.jpg" alt="Logo">
-                <span>Novus Path Labs & Diagnostic Centre Pvt.Ltd.</span>
-            </div>
-
-             <ul class="nav-links" id="navLinks">
-                <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="Our Services.html">Services</a></li>
-                <li><a href="About us.html">About Us</a></li>
-                <li><a href="Contact us.html">Contact</a></li>
-            <div class="mobile-menu" id="mobileMenu">
-                <i class="fas fa-bars"></i>
-            </div>
+   <!-- Navigation (same as other pages) -->
+<nav id="navbar">
+    <div class="nav-container">
+        <div class="logo" style="display:flex; align-items:center; gap:8px;">
+            <img src="Novus.jpg" alt="Logo" style="height:40px; width:auto; object-fit:contain;">
+            <span style="font-weight:700; font-size:18px; color: Black;">Novus Path Labs & Diagnostic Centre Pvt.Ltd.</span>
         </div>
-    </nav>
+<ul class="nav-links" id="navLinks">
+    <li><a href="index.html">Home</a></li>
+    <li><a href="Our Services.html">Services</a></li>
+    <li><a href="About us.html">About Us</a></li>
+    <li><a href="Test Price List.html">Test Price</a></li>
+    <li><a href="Contact us.html" class="active">Contact</a></li>
+</ul>
+        
+        <div class="social-nav">
+            <a href="https://www.facebook.com/Novuspath" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+            <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+            <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+        </div>
+        
+        <div class="mobile-menu" id="mobileMenu">
+            <i class="fas fa-bars"></i>
+        </div>
+    </div>
+</nav>
 
     <!-- Contact Section -->
     <section class="contact-section" id="contact">
@@ -494,6 +513,8 @@
                     <div class="contact-details">
                         <h3>Phone Number</h3>
                         <p>01-5234659</p>
+                        <p>9860007296</p>
+                        <p>9851036028</p>
                     </div>
                 </div>
                 <div class="contact-item">
@@ -845,5 +866,49 @@
         document.getElementById('email').addEventListener('input', updateEmailLink);
         document.getElementById('message').addEventListener('input', updateEmailLink);
     </script>
+   <script>
+// SUPER SIMPLE - Highlight current page
+document.addEventListener('DOMContentLoaded', function() {
+    const navLinks = document.querySelectorAll('.nav-links a');
+    const pageTitle = document.title.toLowerCase();
+
+    // Reset all links
+    navLinks.forEach(link => link.classList.remove('active'));
+
+    // Set active based on page title
+    if (pageTitle.includes('services')) {
+        document.querySelector('.nav-links a[href="Our Services.html"]').classList.add('active');
+    } 
+    else if (pageTitle.includes('about')) {
+        document.querySelector('.nav-links a[href="About us.html"]').classList.add('active');
+    }
+    else if (pageTitle.includes('test price list')) {  // Fixed typo here
+        document.querySelector('.nav-links a[href="Test Price List.html"]').classList.add('active');
+    }
+    else if (pageTitle.includes('contact')) {
+        document.querySelector('.nav-links a[href="Contact us.html"]').classList.add('active');
+    }
+    else {
+        // Default to Home
+        document.querySelector('.nav-links a[href="index.html"]').classList.add('active');
+    }
+
+    // Mobile menu toggle
+    const mobileMenu = document.getElementById('mobileMenu');
+    const navLinksElement = document.getElementById('navLinks');
+
+    if (mobileMenu && navLinksElement) {
+        mobileMenu.addEventListener('click', () => {
+            navLinksElement.classList.toggle('active');
+            const icon = mobileMenu.querySelector('i');
+            if (icon) {
+                icon.classList.toggle('fa-bars');
+                icon.classList.toggle('fa-times');
+            }
+        });
+    }
+});
+</script>
+
 </body>
 </html>
