--- a/Contact us.html
+++ b/Contact us.html
@@ -28,10 +28,9 @@
             background-color: #f5f7fa;
         }
 
- /* Navigation */
+     /* Navigation */
         nav {
             position: fixed;
-            left:0;
             top: 0;
             width: 100%;
             background: rgba(255, 255, 255, 0.98);
@@ -54,6 +53,24 @@
             align-items: center;
         }
 
+        .logo {
+            display: flex;
+            align-items: center;
+            gap: 8px;
+        }
+
+        .logo img {
+            height: 40px;
+            width: auto;
+            object-fit: contain;
+        }
+
+        .logo span {
+            font-weight: 700;
+            font-size: 18px;
+            color: var(--dark);
+        }
+
         .nav-links {
             display: flex;
             gap: 2rem;
@@ -63,11 +80,11 @@
 
         .nav-links a {
             text-decoration: none;
-            left: 196px;
             color: var(--dark);
             font-weight: 500;
             transition: color 0.3s;
             position: relative;
+            white-space: nowrap;
         }
 
         .nav-links a::after {
@@ -86,13 +103,10 @@
             width: 100%;
         }
 
-       .social-nav {
-    display: flex;       /* keep icons in a row */
-    gap: 1rem;           /* space between icons */
-    transform: translateX(100px); /* move whole social icons container slightly left */
-}
-
-
+        .social-nav {
+            display: flex;
+            gap: 1rem;
+        }
 
         .social-nav a {
             width: 36px;
@@ -116,6 +130,7 @@
             font-size: 1.5rem;
             cursor: pointer;
             color: var(--dark);
+            z-index: 1001;
         }
 
 
@@ -410,6 +425,24 @@
             border-top: 1px solid rgba(255,255,255,0.1);
             color: rgba(255,255,255,0.5);
         }
+     .map-container {
+  position: relative;
+  width: 100%;
+  height: 450px;
+}
+
+.map-container iframe {
+  width: 100%;
+  height: 100%;
+}
+
+.map-link {
+  position: absolute;
+  inset: 0;
+  z-index: 2;
+  cursor: pointer;
+}
+
 
         /* Responsive */
         @media (max-width: 768px) {
@@ -514,7 +547,7 @@
                         <h3>Phone Number</h3>
                         <p>01-5234659</p>
                         <p>9860007296</p>
-                        <p>9851036028</p>
+                        <p>9808324145</p>
                     </div>
                 </div>
                 <div class="contact-item">
@@ -595,12 +628,30 @@
                 </div>
             </div>
         </div>
-        
-        <div class="map-section">
-            <div class="map-container">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3502.364247110567!2d77.20691331508247!3d28.61389078242356!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce2f50d37b53d%3A0x4f5b2a4e6e3a3b4c!2sMedical%20Center%20Drive%2C%20Healthcare%20Plaza%2C%20New%20Delhi%2C%20Delhi%20110001!5e0!3m2!1sen!2sin!4v1620000000000!5m2!1sen!2sin" allowfullscreen="" loading="lazy"></iframe>
-            </div>
-        </div>
+
+<div class="map-section">
+  <div class="map-container map-clickable">
+    
+    <a 
+      href="https://maps.app.goo.gl/fNRFYt9T2cvU4WJU7" 
+      target="_blank" 
+      class="map-link"
+      aria-label="Open location in Google Maps">
+    </a>
+
+    <iframe
+      src="https://www.google.com/maps?q=27.6946166,85.2867375&z=16&output=embed"
+      width="100%"
+      height="450"
+      style="border:0;"
+      loading="lazy"
+      referrerpolicy="no-referrer-when-downgrade">
+    </iframe>
+
+  </div>
+</div>
+
+
     </section>
 
     <!-- Footer -->
@@ -611,19 +662,16 @@
                 <p>Leading the way in medical diagnostics with precision, innovation, and care. Your health is our mission.</p>
                 <div class="social-links">
                     <a href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
                     <a href="#"><i class="fab fa-instagram"></i></a>
-                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
                 </div>
             </div>
             <div class="footer-section">
                 <h3>Quick Links</h3>
-                <a href="#home">Home</a>
-                <a href="#services">Services</a>
-                <a href="#packages">Health Packages</a>
-                <a href="#home-collection">Home Collection</a>
-                <a href="#reports">Reports</a>
-                <a href="#contact">Contact Us</a>
+                  <a href="index.html">Home</a>
+                <a href="Our Services.html">Services</a>
+                <a href="About us.html">About Us</a>
+                <a href="Test Price List.html">Test Price</a>
+                <a href="COntact us.html">Contact</a>
             </div>
             <div class="footer-section">
                 <h3>Our Services</h3>
