--- a/Our Services.html
+++ b/Our Services.html
@@ -28,10 +28,9 @@
             overflow-x: hidden;
         }
 
-        /* Navigation */
+            /* Navigation */
         nav {
             position: fixed;
-            left:0;
             top: 0;
             width: 100%;
             background: rgba(255, 255, 255, 0.98);
@@ -54,6 +53,24 @@
             align-items: center;
         }
 
+        .logo {
+            display: flex;
+            align-items: center;
+            gap: 8px;
+        }
+
+        .logo img {
+            height: 40px;
+            width: auto;
+            object-fit: contain;
+        }
+
+        .logo span {
+            font-weight: 700;
+            font-size: 18px;
+            color: var(--dark);
+        }
+
         .nav-links {
             display: flex;
             gap: 2rem;
@@ -63,11 +80,11 @@
 
         .nav-links a {
             text-decoration: none;
-            left: 196px;
             color: var(--dark);
             font-weight: 500;
             transition: color 0.3s;
             position: relative;
+            white-space: nowrap;
         }
 
         .nav-links a::after {
@@ -86,13 +103,10 @@
             width: 100%;
         }
 
-       .social-nav {
-    display: flex;       /* keep icons in a row */
-    gap: 1rem;           /* space between icons */
-    transform: translateX(100px); /* move whole social icons container slightly left */
-}
-
-
+        .social-nav {
+            display: flex;
+            gap: 1rem;
+        }
 
         .social-nav a {
             width: 36px;
@@ -116,6 +130,7 @@
             font-size: 1.5rem;
             cursor: pointer;
             color: var(--dark);
+            z-index: 1001;
         }
 
 
@@ -1244,7 +1259,9 @@
                         </div>
                         <div class="feature-text">
                             <h4>Phone Number</h4>
-                            <p>01-5234659</p>
+                             <p>01-5234659</p>
+                             <p>9860007296</p>
+                             <p>9808324145</p>
                         </div>
                     </div>
                     <div class="feature">
@@ -1278,18 +1295,16 @@
                 <p>Leading the way in medical diagnostics with precision, innovation, and care. Your health is our mission.</p>
                 <div class="social-links">
                     <a href="https://www.facebook.com/Novuspath"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
                     <a href="#"><i class="fab fa-instagram"></i></a>
-                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
                 </div>
             </div>
             <div class="footer-section">
                 <h3>Quick Links</h3>
-                <a href="#services">Our Services</a>
-                <a href="#packages">Health Packages</a>
-                <a href="#home-collection">Home Collection</a>
-                <a href="#reports">Reports & Results</a>
-                <a href="#contact">Contact Us</a>
+                <a href="index.html">Home</a>
+                <a href="Our Services.html">Services</a>
+                <a href="About us.html">About Us</a>
+                <a href="Test Price List.html">Test Price</a>
+                <a href="COntact us.html">Contact</a>
             </div>
             <div class="footer-section">
                 <h3>Our Services</h3>
