--- a/Our Services.html
+++ b/Our Services.html
@@ -1291,7 +1291,7 @@
     <footer>
         <div class="footer-content">
             <div class="footer-section">
-                <h3><i class="fas fa-flask"></i> Novus Path Labs</h3>
+                 <h3>Novus Path Labs & Diagnostic Centre Pvt.Ltd.</h3>
                 <p>Leading the way in medical diagnostics with precision, innovation, and care. Your health is our mission.</p>
                 <div class="social-links">
                     <a href="https://www.facebook.com/Novuspath"><i class="fab fa-facebook-f"></i></a>
