--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             background-color: #f5f7fa;
         }
 
-        /* Navigation */
+    /* Navigation */
         nav {
             position: fixed;
             top: 0;
@@ -143,20 +143,23 @@
             display: flex;
             align-items: center;
             overflow: hidden;
-            background: linear-gradient(135deg, rgba(0,102,204,0.8) 0%, rgba(0,168,232,0.8) 100%);
+             background: linear-gradient(rgba(0, 102, 204, 0.9), rgba(0, 168, 232, 0.9));
         }
+.hero::before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 100%;
+    height: 100%;
+    background: url('Novus.jpg') no-repeat;
+    background-size: 100%;
+    background-position: center;
+    transform: translate(-50%, -50%);
+    opacity: 0.12;
+    z-index: 0;
+}
 
-        .hero::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: url('https://images.unsplash.com/photo-1559757148-5c350d0d3c56?ixlib=rb-4.0.3&auto=format&fit=crop&w=1470&q=80') center center / cover no-repeat;
-            opacity: 0.2;
-            z-index: 0;
-        }
 
         .hero-content {
             max-width: 1400px;
