--- a/Contact us.html
+++ b/Contact us.html
@@ -679,7 +679,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2025 Novus Path Labs & Diagnostic Centre Pvt. Ltd. All rights reserved. | Designed with excellence in healthcare</p>
+             <p>&copy; 2025 Novus Path Labs & Diagnostic Centre Pvt. Ltd. All rights reserved.</p>
         </div>
     </footer>
 
