--- a/Test Price List.html
+++ b/Test Price List.html
@@ -574,7 +574,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2025 Novus Path Labs & Diagnostic Centre. All rights reserved.</p>
+             <p>&copy; 2025 Novus Path Labs & Diagnostic Centre Pvt. Ltd. All rights reserved.</p>
         </div>
     </footer>
 
