--- a/index.html
+++ b/index.html
@@ -1372,11 +1372,11 @@
         </div>
         <div class="footer-section">
             <h3>Quick Links</h3>
-            <a href="#home">Home</a>
-            <a href="#services">Services</a>
-            <a href="#about">About Us</a>
-            <a href="#contact">Contact</a>
-            <a href="#contact">Book Appointment</a>
+            <a href="index.html">Home</a>
+                <a href="Our Services.html">Services</a>
+                <a href="About us.html">About Us</a>
+                <a href="Test Price List.html">Test Price</a>
+                <a href="COntact us.html">Contact</a>
         </div>
         <div class="footer-section">
             <h3>Our Services</h3>
