--- a/index.html
+++ b/index.html
@@ -1376,7 +1376,7 @@
                 <a href="Our Services.html">Services</a>
                 <a href="About us.html">About Us</a>
                 <a href="Test Price List.html">Test Price</a>
-                <a href="COntact us.html">Contact</a>
+                <a href="Contact us.html">Contact</a>
         </div>
         <div class="footer-section">
             <h3>Our Services</h3>
